OO-9284: remove ignore for email settings